--- a/Content/css/styles.css
+++ b/Content/css/styles.css
@@ -11,6 +11,8 @@ body {
   background-size: cover;
 }
 
+/*--------------------------------------Navbar Styling--------------------------------------*/
+
 .navbar-inverse {
   background-color: #000000;
   background: rgba(0,0,0,0.25);
@@ -21,6 +23,8 @@ body {
   padding-top: 35px;
   font-size: 18pt;
 }
+
+/*--------------------------------------Landing Page Styling--------------------------------------*/
 
 .index-jumbotron {
   background: rgba(0,0,0,0.25);
@@ -56,6 +60,8 @@ h1 {
 .index-jumbotron .btn-success:hover {
   background-color: green;
 }
+
+/*--------------------------------------Login Page Styling--------------------------------------*/
 
 .login-jumbotron {
   background: rgba(0,0,0,0.25);
